<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466"
        app:srcCompat="@drawable/main"
        android:contentDescription="@string/main_image_description" />

    <ImageButton
        android:id="@+id/buttonStats"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="?android:selectableItemBackground"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/button_stats"
        android:layout_gravity="top|end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/stats_image_button"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/buttonChat"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="?android:selectableItemBackground"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/button_chat"
        android:layout_gravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/chat_image_button"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonGrammar"
        android:layout_width="305dp"
        android:layout_height="0dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/bowlby_one"
        android:text="@string/button_grammar_tests"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonWords"
        android:layout_width="305dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/bowlby_one"
        android:text="@string/button_word_tests"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGrammar"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonGame"
        android:layout_width="305dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/bowlby_one"
        android:text="@string/button_game"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonExam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonWords"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonExam"
        android:layout_width="305dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/bowlby_one"
        android:text="@string/button_exam"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGame"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>