<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/messageLayout"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:id="@+id/messageLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/chatHolderColor"
        android:orientation="horizontal"
        android:weightSum="5">

        <EditText
            android:id="@+id/userInput"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:layout_marginStart="3dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:hint="@string/chat_hint"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:digits="@string/allowed_symbols" />

        <ImageButton
            android:id="@+id/buttonSend"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="3dp"
            android:background="@color/chatSendButtonColor"
            android:contentDescription="@string/chat_send_button_description"
            android:src="@android:drawable/ic_menu_send" />

    </LinearLayout>

</RelativeLayout>