<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game"
    tools:context=".TranscriptionGameActivity">

    <TextView
        android:id="@+id/triesCount"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/progressColor"
        android:fontFamily="@font/bowlby_one"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/bowlby_one"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/triesCount" />

    <TextView
        android:id="@+id/transcription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/progressColor"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <ImageButton
        android:id="@+id/imageListen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#000000"
        android:contentDescription="@string/menu_title_listen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.286"
        app:layout_constraintStart_toEndOf="@+id/transcription"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:srcCompat="@drawable/ic_action_listen"
        tools:ignore="TouchTargetSizeCheck" />


    <ScrollView
        android:id="@+id/scrollId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transcription"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/scrollLayoutH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/scrollLayout"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>

    </ScrollView>

    <EditText
        android:id="@+id/textField"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/edit_hint"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonApply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword" />

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_button_word_list"
        android:text="@string/button_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>